# amazon-bedrock-agentcore-samples

./: .gitignore  README.ja.md
01-tutorials/: .gitignore
01-tutorials/01-AgentCore-runtime/: utils.py
01-tutorials/01-AgentCore-runtime/01-hosting-agent/01-strands-with-bedrock-model/: .bedrock_agentcore.yaml  Dockerfile  README.ja.md  pyproject.toml  runtime_with_strands_and_bedrock_models.ja.ipynb  strands_claude.py
01-tutorials/01-AgentCore-runtime/01-hosting-agent/02-langgraph-with-bedrock-model/: README_translate.md  git_update_commands.md  pyproject.toml  runtime_with_langgraph_and_bedrock_models.ja.ipynb
01-tutorials/01-AgentCore-runtime/01-hosting-agent/04-crewai-with-bedrock-model/: runtime-with-crewai-and-bedrock-models.ja.ipynb
01-tutorials/01-AgentCore-runtime/02-hosting-MCP-server/: .gitignore  Dockerfile.custom  README.ja.md  TROUBLESHOOTING.md  agent_utils.py  dev-requirements.txt  hosting_mcp_server.ja.ipynb  mcp_client.py  mcp_connection_test.py  mcp_server.py  my_mcp_client_remote.py  my_mcp_client_remote2.py  pyproject.toml  redeploy_agent.py  requirements.txt  ruff.toml  setup_log_groups.py  setup_trace_destination.py  setup_xray_trace_destination.py
01-tutorials/01-AgentCore-runtime/02-hosting-MCP-server/utils/: __init__.py  aws_auth.py  mcp_client.py  token_cache.py  uuid_fixer.py
01-tutorials/01-AgentCore-runtime/03-advanced-concepts/01-streaming-agent-response/: pyproject.toml  streamining_agent_response.ja.ipynb
01-tutorials/01-AgentCore-runtime/03-advanced-concepts/02-understanding-runtime-context/: pyproject.toml  understanding_runtime_context.ja.ipynb
01-tutorials/01-AgentCore-runtime/03-advanced-concepts/03-handling-large-payloads/: handling_large_payloads.ja.ipynb  pyproject.toml
01-tutorials/02-AgentCore-gateway/01-transform-lambda-into-mcp-tools/: 01-gateway-target-lambda.ja.ipynb
01-tutorials/02-AgentCore-gateway/02-transform-apis-into-mcp-tools/02-transform-openapi-into-mcp-tools/: 01-openapis-into-mcp-api-key.ja.ipynb  02-openapis-into-mcp-oauth-enterpris-apis.ja.ipynb
01-tutorials/02-AgentCore-gateway/02-transform-apis-into-mcp-tools/03-transform-smithyapis-into-mcp-tools/: 01-s3-smithy-into-mcp-iam.ja.ipynb
01-tutorials/02-AgentCore-gateway/03-search-tools/: 01-gateway-search.ja.ipynb  pyproject.toml
01-tutorials/05-AgentCore-tools/01-Agent-Core-code-interpreter/01-file-operations-using-code-interpreter/: file-operations-using-code-interpreter.ja.ipynb
01-tutorials/06-AgentCore-observability/01-Agentcore-runtime-hosted/: runtime_with_strands_and_bedrock_models.ja.ipynb
01-tutorials/06-AgentCore-observability/02-open-source-agents-3p/CrewAI/: CrewAI_Observability.ja.ipynb
02-use-cases/06-asynchronous-shopping-assistant/: asynchronous_shopping_assistant_langgraph.ja.ipynb
03-integrations/02-bedrock-agent/: Bedrock_Agent_Integration_with_Bedrock_Agent_Core_Gateway.ja.ipynb
scripts/: ARM64_BUILD_README.md  pyproject.toml  setup_arm64_build.py  translate_ipynb.py
scripts/utils/: README.md  __init__.py  agentcore_client.py  cli.py  deploy_utils.py
(+18 files in other folders)
