[project]
name = "02-hosting-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.14",
    "aws-opentelemetry-distro>=0.10.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "boto3>=1.28.0",
    "fastapi>=0.116.1",
    "fastmcp==2.10.6",
    "ruff>=0.3.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]
