[project]
name = "01-strands-with-bedrock-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "boto3>=1.39.9",
    "strands-agents>=1.0.1",
    "strands-agents-tools>=0.2.1",
    "uv>=0.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
