[project]
name = "02-langgraph-with-bedrock-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "bedrock-agentcore-starter-toolkit>=0.1.2",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.27",
    "langchain[aws]>=0.3.27",
    "langgraph>=0.5.4",
    "langsmith[otel]>=0.4.8",
    "opentelemetry-instrumentation-langchain>=0.43.1",
    "starlette>=0.47.2",
    "uv>=0.8.3",
    "uvicorn>=0.35.0",
]
